--- a/pom.xml
+++ b/pom.xml
@@ -176,7 +176,7 @@
 		<dependency>
 			<groupId>org.jboss.arquillian.graphene</groupId>
 			<artifactId>graphene-webdriver</artifactId>
-			<version>2.1.0.Final</version> <!-- Newer versions appear not be fully compatible with websockets and unload (tried 2.5.4) -->
+			<version>2.1.0.Final</version> <!-- Newer versions are incompatible with selenium-java:4.8.0 -->
 			<type>pom</type>
 			<scope>test</scope>
 		</dependency>
