--- a/pom.xml
+++ b/pom.xml
@@ -255,7 +255,7 @@
 				<artifactId>frontend-maven-plugin</artifactId>
 				<version>1.12.1</version>
 				<configuration>
-					<nodeVersion>v4.6.0</nodeVersion>
+					<nodeVersion>v18.15.0</nodeVersion>
 					<installDirectory>target</installDirectory>
 				</configuration>
 				<executions>
@@ -296,6 +296,13 @@
 					<nosuffix>true</nosuffix>
 					<jsEngine>CLOSURE</jsEngine>
 				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.codehaus.plexus</groupId>
+						<artifactId>plexus-utils</artifactId>
+						<version>3.5.0</version>
+					</dependency>
+				</dependencies>
 				<executions>
 					<execution>
 						<id>minify-omnifaces</id>
