Fix #760: add JPMS module name to manifest

--- a/pom.xml
+++ b/pom.xml
@@ -312,6 +312,7 @@
 						<manifestEntries>
 							<URL>${project.url}</URL>
 							<Extension-Name>${project.artifactId}</Extension-Name>
+							<Automatic-Module-Name>${project.groupId}</Automatic-Module-Name>
 						</manifestEntries>
 					</archive>
 				</configuration>
