Added maven enforcer plugin and updated config of license maven plugin

--- a/pom.xml
+++ b/pom.xml
@@ -200,28 +200,43 @@
 
 		<plugins>
 
+			<!-- Prevent wrong JDK from being used to build the project. -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireJavaVersion>
+                                    <version>[1.7,9)</version>
+                                </requireJavaVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
 			<!-- Add missing license headers to source files. -->
 			<plugin>
 				<groupId>com.mycila</groupId>
 				<artifactId>license-maven-plugin</artifactId>
 				<version>4.1</version>
 				<configuration>
-					<header>license.txt</header>
-					<excludes>
-						<exclude>*.*</exclude>
-					</excludes>
-					<mapping>
-						<java>SLASHSTAR_STYLE</java>
-					</mapping>
+                    <licenseSets>
+                        <licenseSet>
+                            <header>license.txt</header>
+                            <excludes>
+                                <exclude>*.*</exclude>
+                            </excludes>
+                        </licenseSet>
+                    </licenseSets>
 				</configuration>
-				<executions>
-					<execution>
-						<phase>process-sources</phase>
-						<goals>
-							<goal>format</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 
 			<!-- Configure the JavaScript minifier. -->
@@ -289,7 +304,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.2.2</version>
+				<version>3.3.0</version>
 				<configuration>
 					<archive>
 						<manifest>
