--- a/pom.xml
+++ b/pom.xml
@@ -70,9 +70,9 @@
 
 		<!-- Test server versions. -->
 		<test.wildfly.jsf22.version>13.0.0.Final</test.wildfly.jsf22.version> <!-- 13.0.0 is the latest WF version using JSF 2.2 -->
-		<test.wildfly.jsf23.version>26.1.3.Final</test.wildfly.jsf23.version> <!-- https://search.maven.org/artifact/org.wildfly/wildfly-dist -->
-		<test.tomee.version>7.1.4</test.tomee.version> <!-- https://search.maven.org/artifact/org.apache.tomee/apache-tomee -->
-		<test.payara.version>4.1.2.181</test.payara.version> <!-- https://search.maven.org/artifact/fish.payara.distributions/payara-web -->
+		<test.wildfly.jsf23.version>26.1.3.Final</test.wildfly.jsf23.version> <!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-dist -->
+		<test.tomee.version>7.1.4</test.tomee.version> <!-- https://mvnrepository.com/artifact/org.apache.tomee/apache-tomee -->
+		<test.payara.version>4.1.2.181</test.payara.version> <!-- https://mvnrepository.com/artifact/fish.payara.distributions/payara-web -->
 	</properties>
 
 	<dependencies>
