--- a/pom.xml
+++ b/pom.xml
@@ -68,14 +68,14 @@
 		<maven.source.excludeResources>true</maven.source.excludeResources>
 
 		<!-- Test server versions. -->
-		<test.wildfly27.version>29.0.0.Alpha1</test.wildfly27.version> <!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-preview-dist -->
-		<test.wildfly26.version>26.1.3.Final</test.wildfly26.version> <!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-preview-dist -->
-		<test.liberty.version>21.0.0.12-beta</test.liberty.version> <!-- https://mvnrepository.com/artifact/io.openliberty.beta/openliberty-jakartaee9 -->
-		<test.glassfish7.version>7.0.5</test.glassfish7.version> <!-- https://mvnrepository.com/artifact/org.glassfish.main.distributions/glassfish -->
-		<test.glassfish6.version>6.2.5</test.glassfish6.version> <!-- https://mvnrepository.com/artifact/org.glassfish.main.distributions/glassfish -->
+		<test.wildfly-faces4.version>28.0.1.Final</test.wildfly-faces4.version> <!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-preview-dist -->
+		<test.wildfly-faces3.version>26.1.3.Final</test.wildfly-faces3.version> <!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-preview-dist -->
+		<test.liberty-faces3.version>21.0.0.12-beta</test.liberty-faces3.version> <!-- https://mvnrepository.com/artifact/io.openliberty.beta/openliberty-jakartaee9 -->
+		<test.glassfish-faces4.version>7.0.5</test.glassfish-faces4.version> <!-- https://mvnrepository.com/artifact/org.glassfish.main.distributions/glassfish -->
+		<test.glassfish-faces3.version>6.2.5</test.glassfish-faces3.version> <!-- https://mvnrepository.com/artifact/org.glassfish.main.distributions/glassfish -->
 		<test.tomcat.version>10.1.10</test.tomcat.version> <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat -->
 		<test.piranha.version>23.6.0</test.piranha.version> <!-- https://mvnrepository.com/artifact/cloud.piranha.arquillian/piranha-arquillian-server TODO: requires newer Arquillian version but then other servers will fail their tests -->
-		<test.tomee.version>9.1.0</test.tomee.version> <!-- https://mvnrepository.com/artifact/org.apache.tomee/apache-tomee -->
+		<test.tomee-faces3.version>9.1.0</test.tomee-faces3.version> <!-- https://mvnrepository.com/artifact/org.apache.tomee/apache-tomee -->
 		<test.payara.version>6.2023.6</test.payara.version> <!-- https://mvnrepository.com/artifact/fish.payara.distributions/payara-web -->
 
 		<!-- Test impl versions for servletcontainers (Tomcat/Piranha). -->
@@ -524,9 +524,9 @@
 		<!-- below sections, then you need to add a default lifecycle mapping as instructed in M2E documentation: -->
 		<!-- https://www.eclipse.org/m2e/documentation/m2e-execution-not-covered.html#common-problems -->
 
-		<!-- WildFly integration test profile: mvn verify -P wildfly27 -->
+		<!-- WildFly - Faces 4.x integration test profile: mvn verify -P wildfly-faces4 -->
 		<profile>
-			<id>wildfly27</id>
+			<id>wildfly-faces4</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
@@ -550,7 +550,7 @@
 										<artifactItem>
 											<groupId>org.wildfly</groupId>
 											<artifactId>wildfly-preview-dist</artifactId>
-											<version>${test.wildfly27.version}</version>
+											<version>${test.wildfly-faces4.version}</version>
 											<type>zip</type>
 										</artifactItem>
 									</artifactItems>
@@ -572,9 +572,9 @@
 			</build>
 		</profile>
 
-		<!-- WildFly integration test profile: mvn verify -P wildfly26 -->
+		<!-- WildFly - Faces 3.x integration test profile: mvn verify -P wildfly-faces3 -->
 		<profile>
-			<id>wildfly26</id>
+			<id>wildfly-faces3</id>
 			<dependencies>
 				<dependency>
 					<groupId>org.wildfly.arquillian</groupId>
@@ -595,7 +595,7 @@
 										<artifactItem>
 											<groupId>org.wildfly</groupId>
 											<artifactId>wildfly-preview-dist</artifactId>
-											<version>${test.wildfly26.version}</version>
+											<version>${test.wildfly-faces3.version}</version>
 											<type>zip</type>
 										</artifactItem>
 									</artifactItems>
@@ -608,7 +608,7 @@
 						<artifactId>maven-failsafe-plugin</artifactId>
 						<configuration>
 							<systemPropertyVariables>
-								<jboss.home>${project.build.directory}/wildfly-preview-${test.wildfly26.version}</jboss.home>
+								<jboss.home>${project.build.directory}/wildfly-preview-${test.wildfly-faces3.version}</jboss.home>
 								<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
 							</systemPropertyVariables>
 						</configuration>
@@ -617,9 +617,9 @@
 			</build>
 		</profile>
 
-		<!-- OpenLiberty integration test profile: mvn verify -P liberty -->
+		<!-- OpenLiberty - Faces 3.x integration test profile: mvn verify -P liberty -->
 		<profile>
-			<id>liberty</id>
+			<id>liberty-faces3</id>
 			<dependencies>
 				<dependency>
 					<groupId>io.openliberty.arquillian</groupId>
@@ -640,7 +640,7 @@
 										<artifactItem>
 											<groupId>io.openliberty.beta</groupId>
 											<artifactId>openliberty-jakartaee9</artifactId>
-											<version>${test.liberty.version}</version>
+											<version>${test.liberty-faces3.version}</version>
 											<type>zip</type>
 										</artifactItem>
 										<artifactItem>
@@ -695,9 +695,9 @@
 			</build>
 		</profile>
 
-		<!-- GlassFish 7.x integration test profile: mvn verify -P glassfish7 -->
+		<!-- GlassFish - Faces 4.x integration test profile: mvn verify -P glassfish-faces4 -->
 		<profile>
-			<id>glassfish7</id>
+			<id>glassfish-faces4</id>
 			<dependencies>
 				<dependency>
 					<groupId>org.jboss.arquillian.container</groupId>
@@ -718,7 +718,7 @@
 										<artifactItem>
 											<groupId>org.glassfish.main.distributions</groupId>
 											<artifactId>glassfish</artifactId>
-											<version>${test.glassfish7.version}</version>
+											<version>${test.glassfish-faces4.version}</version>
 											<type>zip</type>
 										</artifactItem>
 									</artifactItems>
@@ -731,7 +731,7 @@
 						<artifactId>maven-failsafe-plugin</artifactId>
 						<configuration>
 							<environmentVariables>
-								<GLASSFISH_HOME>${project.build.directory}/glassfish7</GLASSFISH_HOME>
+								<GLASSFISH_HOME>${project.build.directory}/glassfish-faces4</GLASSFISH_HOME>
 							</environmentVariables>
 						</configuration>
 					</plugin>
@@ -739,9 +739,9 @@
 			</build>
 		</profile>
 
-		<!-- GlassFish 6.x integration test profile: mvn verify -P glassfish6 -->
+		<!-- GlassFish - Faces 3.x integration test profile: mvn verify -P glassfish-faces3 -->
 		<profile>
-			<id>glassfish6</id>
+			<id>glassfish-faces3</id>
 			<dependencies>
 				<dependency>
 					<groupId>org.jboss.arquillian.container</groupId>
@@ -762,7 +762,7 @@
 										<artifactItem>
 											<groupId>org.glassfish.main.distributions</groupId>
 											<artifactId>glassfish</artifactId>
-											<version>${test.glassfish6.version}</version>
+											<version>${test.glassfish-faces3.version}</version>
 											<type>zip</type>
 										</artifactItem>
 									</artifactItems>
@@ -775,7 +775,7 @@
 						<artifactId>maven-failsafe-plugin</artifactId>
 						<configuration>
 							<environmentVariables>
-								<GLASSFISH_HOME>${project.build.directory}/glassfish6</GLASSFISH_HOME>
+								<GLASSFISH_HOME>${project.build.directory}/glassfish-faces3</GLASSFISH_HOME>
 							</environmentVariables>
 						</configuration>
 					</plugin>
@@ -783,7 +783,7 @@
 			</build>
 		</profile>
 
-		<!-- Tomcat-Mojarra 4.x integration test profile: mvn verify -P tomcat-mojarra4 -->
+		<!-- Tomcat - Mojarra 4.x integration test profile: mvn verify -P tomcat-mojarra4 -->
 		<profile>
 			<id>tomcat-mojarra4</id>
 			<dependencies>
@@ -863,7 +863,7 @@
 			</build>
 		</profile>
 
-		<!-- Tomcat-Mojarra 3.x integration test profile: mvn verify -P tomcat-mojarra3 -->
+		<!-- Tomcat - Mojarra 3.x integration test profile: mvn verify -P tomcat-mojarra3 -->
 		<profile>
 			<id>tomcat-mojarra3</id>
 			<dependencies>
@@ -943,7 +943,7 @@
 			</build>
 		</profile>
 
-		<!-- Tomcat-MyFaces 4.x integration test profile: mvn verify -P tomcat-myfaces4 -->
+		<!-- Tomcat - MyFaces 4.x integration test profile: mvn verify -P tomcat-myfaces4 -->
 		<profile>
 			<id>tomcat-myfaces4</id>
 			<dependencies>
@@ -1023,7 +1023,7 @@
 			</build>
 		</profile>
 
-		<!-- Tomcat-MyFaces 3.x integration test profile: mvn verify -P tomcat-myfaces3 -->
+		<!-- Tomcat - MyFaces 3.x integration test profile: mvn verify -P tomcat-myfaces3 -->
 		<profile>
 			<id>tomcat-myfaces3</id>
 			<dependencies>
@@ -1147,14 +1147,14 @@
 			</build>
 		</profile>
 
-		<!-- TomEE integration test profile: mvn verify -P tomee -->
+		<!-- TomEE - Faces 3.x integration test profile: mvn verify -P tomee-faces3 -->
 		<profile>
-			<id>tomee</id>
+			<id>tomee-faces3</id>
 			<dependencies>
 				<dependency>
 					<groupId>org.apache.tomee</groupId>
 					<artifactId>arquillian-tomee-remote</artifactId>
-					<version>${test.tomee.version}</version>
+					<version>${test.tomee-faces3.version}</version>
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
@@ -1170,7 +1170,7 @@
 										<artifactItem>
 											<groupId>org.apache.tomee</groupId>
 											<artifactId>apache-tomee</artifactId>
-											<version>${test.tomee.version}</version>
+											<version>${test.tomee-faces3.version}</version>
 											<type>zip</type>
 											<classifier>webprofile</classifier>
 										</artifactItem>
@@ -1184,7 +1184,7 @@
 						<artifactId>maven-failsafe-plugin</artifactId>
 						<configuration>
 							<systemPropertyVariables>
-								<tomee.dir>${project.build.directory}/apache-tomee-webprofile-${test.tomee.version}</tomee.dir>
+								<tomee.dir>${project.build.directory}/apache-tomee-webprofile-${test.tomee-faces3.version}</tomee.dir>
 							</systemPropertyVariables>
 						</configuration>
 					</plugin>
