--- a/pom.xml
+++ b/pom.xml
@@ -68,27 +68,27 @@
 		<maven.source.excludeResources>true</maven.source.excludeResources>
 
 		<!-- Test server versions. -->
-		<test.wildfly-faces4.version>28.0.1.Final</test.wildfly-faces4.version> <!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-preview-dist -->
+		<test.wildfly-faces4.version>30.0.0.Final</test.wildfly-faces4.version> <!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-preview-dist -->
 		<test.wildfly-faces3.version>26.1.3.Final</test.wildfly-faces3.version> <!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-preview-dist -->
 		<test.liberty-faces3.version>21.0.0.12-beta</test.liberty-faces3.version> <!-- https://mvnrepository.com/artifact/io.openliberty.beta/openliberty-jakartaee9 TODO: EagerIT causes deployment exception -->
-		<test.glassfish-faces4.version>7.0.5</test.glassfish-faces4.version> <!-- https://mvnrepository.com/artifact/org.glassfish.main.distributions/glassfish -->
+		<test.glassfish-faces4.version>7.0.10</test.glassfish-faces4.version> <!-- https://mvnrepository.com/artifact/org.glassfish.main.distributions/glassfish -->
 		<test.glassfish-faces3.version>6.2.5</test.glassfish-faces3.version> <!-- https://mvnrepository.com/artifact/org.glassfish.main.distributions/glassfish -->
-		<test.tomcat.version>10.1.10</test.tomcat.version> <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat -->
-		<test.piranha-faces4.version>23.6.0</test.piranha-faces4.version> <!-- https://mvnrepository.com/artifact/cloud.piranha.arquillian/piranha-arquillian-server TODO: requires newer Arquillian version but then other servers will fail their tests -->
-		<test.tomee-faces3.version>9.1.0</test.tomee-faces3.version> <!-- https://mvnrepository.com/artifact/org.apache.tomee/apache-tomee -->
+		<test.tomcat.version>10.1.16</test.tomcat.version> <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat -->
+		<test.piranha-faces4.version>23.11.0</test.piranha-faces4.version> <!-- https://mvnrepository.com/artifact/cloud.piranha.arquillian/piranha-arquillian-server TODO: requires newer Arquillian version but then other servers will fail their tests -->
+		<test.tomee-faces3.version>9.1.1</test.tomee-faces3.version> <!-- https://mvnrepository.com/artifact/org.apache.tomee/apache-tomee -->
 
 		<!-- Test impl versions for servletcontainers (Tomcat/Piranha). -->
-		<test.mojarra4.version>4.0.2</test.mojarra4.version> <!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.faces -->
-		<test.mojarra3.version>3.0.4</test.mojarra3.version> <!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.faces -->
+		<test.mojarra4.version>4.0.5</test.mojarra4.version> <!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.faces -->
+		<test.mojarra3.version>3.0.5</test.mojarra3.version> <!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.faces -->
 		<test.myfaces4.version>4.0.1</test.myfaces4.version> <!-- https://mvnrepository.com/artifact/org.apache.myfaces.core/myfaces-impl TODO: subsequent Ajax submits on same view isn't seen as type=XHR but as type=NONE by RequestGuard -->
 		<test.myfaces3.version>3.0.2</test.myfaces3.version> <!-- https://mvnrepository.com/artifact/org.apache.myfaces.core/myfaces-impl -->
-		<test.weld5.version>5.1.1.Final</test.weld5.version> <!-- https://mvnrepository.com/artifact/org.jboss.weld.servlet/weld-servlet-shaded -->
+		<test.weld5.version>5.1.2.Final</test.weld5.version> <!-- https://mvnrepository.com/artifact/org.jboss.weld.servlet/weld-servlet-shaded -->
 		<test.weld4.version>4.0.3.Final</test.weld4.version> <!-- https://mvnrepository.com/artifact/org.jboss.weld.servlet/weld-servlet-shaded -->
 		<test.hibernateValidator8.version>8.0.1.Final</test.hibernateValidator8.version> <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
 		<test.hibernateValidator7.version>7.0.5.Final</test.hibernateValidator7.version> <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
 		<test.jsonp.version>2.0.1</test.jsonp.version> <!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.json -->
 		<test.jstl.version>2.0.0</test.jstl.version> <!-- https://mvnrepository.com/artifact/org.glassfish.web/jakarta.servlet.jsp.jstl NOTE: JSTL 3.x cannot be used because we also want to test Tomcat + Faces 3.0 -->
-		<test.tyrus.version>2.1.3</test.tyrus.version> <!-- https://mvnrepository.com/artifact/org.glassfish.tyrus/tyrus-container-servlet -->
+		<test.tyrus.version>2.1.4</test.tyrus.version> <!-- https://mvnrepository.com/artifact/org.glassfish.tyrus/tyrus-container-servlet -->
 
 		<!-- Arquillian config. -->
 		<arquillian.browser>htmlUnit</arquillian.browser> <!-- To use a different browser, use e.g. mvn clean verify -Darquillian.browser=phantomjs -->
@@ -228,7 +228,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.4.1</version>
                 <executions>
                     <execution>
                         <phase>validate</phase>
@@ -250,7 +250,7 @@
 			<plugin>
 				<groupId>com.mycila</groupId>
 				<artifactId>license-maven-plugin</artifactId>
-				<version>4.1</version>
+				<version>4.3</version>
 				<configuration>
                     <licenseSets>
                         <licenseSet>
@@ -267,7 +267,7 @@
 			<plugin>
 				<groupId>com.github.eirslett</groupId>
 				<artifactId>frontend-maven-plugin</artifactId>
-				<version>1.12.1</version>
+				<version>1.14.2</version>
 				<configuration>
 					<nodeVersion>v18.15.0</nodeVersion>
 					<installDirectory>target</installDirectory>
@@ -304,7 +304,7 @@
 			<plugin>
 				<groupId>com.samaxes.maven</groupId>
 				<artifactId>minify-maven-plugin</artifactId>
-				<version>1.7.6</version>
+				<version>1.7.6</version> <!-- Old, but we can't migrate to closure-compiler-maven-plugin because it enforces 'use strict' -->
 				<configuration>
 					<jsTargetDir>META-INF/resources/omnifaces</jsTargetDir>
 					<nosuffix>true</nosuffix>
@@ -375,7 +375,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.2.1</version>
+				<version>3.3.0</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -390,7 +390,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.3.1</version>
+				<version>3.6.2</version>
 				<configuration>
 					<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
 					<javadocVersion>${javase.version}</javadocVersion>
@@ -416,7 +416,7 @@
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>1.6.8</version>
+				<version>1.6.13</version>
 				<extensions>true</extensions>
 				<configuration>
 					<serverId>ossrh</serverId>
@@ -441,7 +441,7 @@
 									<pluginExecutionFilter>
 										<groupId>com.mycila</groupId>
 										<artifactId>license-maven-plugin</artifactId>
-										<versionRange>[4.1,)</versionRange>
+										<versionRange>[4.3,)</versionRange>
 										<goals>
 											<goal>format</goal>
 										</goals>
@@ -476,7 +476,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
-					<version>3.2.0</version>
+					<version>3.6.1</version>
 					<executions>
 						<execution>
 							<phase>process-test-classes</phase>
@@ -492,12 +492,12 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.2</version> <!-- 2.22.2 is the minimum version having native JUnit 5 support. -->
+					<version>3.2.2</version> <!-- 2.22.2 is the minimum version having native JUnit 5 support. -->
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>2.22.2</version>
+					<version>3.2.2</version>
 					<executions>
 						<execution>
 							<goals>
@@ -533,7 +533,7 @@
 				<dependency>
 					<groupId>org.wildfly.arquillian</groupId>
 					<artifactId>wildfly-arquillian-container-managed</artifactId>
-					<version>3.0.1.Final</version>
+					<version>5.0.1.Final</version>
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
@@ -578,7 +578,7 @@
 				<dependency>
 					<groupId>org.wildfly.arquillian</groupId>
 					<artifactId>wildfly-arquillian-container-managed</artifactId>
-					<version>3.0.1.Final</version>
+					<version>5.0.1.Final</version>
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
@@ -623,7 +623,7 @@
 				<dependency>
 					<groupId>io.openliberty.arquillian</groupId>
 					<artifactId>arquillian-liberty-managed-jakarta</artifactId>
-					<version>2.1.0</version>
+					<version>2.1.3</version>
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
@@ -645,7 +645,7 @@
 										<artifactItem>
 											<groupId>io.openliberty.arquillian</groupId>
 											<artifactId>arquillian-liberty-support-jakarta</artifactId>
-											<version>2.1.0</version>
+											<version>2.1.3</version>
 											<type>zip</type>
 											<classifier>feature</classifier>
 											<outputDirectory>${project.build.directory}/wlp/usr</outputDirectory>
@@ -658,7 +658,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-resources-plugin</artifactId>
-						<version>3.2.0</version>
+						<version>3.3.1</version>
 						<executions>
 							<execution>
 								<id>update-liberty-server</id> <!-- Liberty apparently requires a bit more specific server.xml in order for its own Arquillian plugin to be able to manage it. -->
@@ -816,7 +816,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-resources-plugin</artifactId>
-						<version>3.2.0</version>
+						<version>3.3.1</version>
 						<executions>
 							<execution>
 								<id>update-tomcat-users</id> <!-- Else Tomcat unexpectedly spits error that Arquillian isn't allowed to manage Tomcat. Most probably org.jboss.arquillian.container:arquillian-tomcat-managed-8 should be updated to support Tomcat 10 but this isn't available (yet). -->
@@ -896,7 +896,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-resources-plugin</artifactId>
-						<version>3.2.0</version>
+						<version>3.3.1</version>
 						<executions>
 							<execution>
 								<id>update-tomcat-users</id> <!-- Else Tomcat unexpectedly spits error that Arquillian isn't allowed to manage Tomcat. Most probably org.jboss.arquillian.container:arquillian-tomcat-managed-8 should be updated to support Tomcat 10 but this isn't available (yet). -->
@@ -976,7 +976,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-resources-plugin</artifactId>
-						<version>3.2.0</version>
+						<version>3.3.1</version>
 						<executions>
 							<execution>
 								<id>update-tomcat-users</id> <!-- Else Tomcat unexpectedly spits error that Arquillian isn't allowed to manage Tomcat. Most probably org.jboss.arquillian.container:arquillian-tomcat-managed-8 should be updated to support Tomcat 10 but this isn't available (yet). -->
@@ -1056,7 +1056,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-resources-plugin</artifactId>
-						<version>3.2.0</version>
+						<version>3.3.1</version>
 						<executions>
 							<execution>
 								<id>update-tomcat-users</id> <!-- Else Tomcat unexpectedly spits error that Arquillian isn't allowed to manage Tomcat. Most probably org.jboss.arquillian.container:arquillian-tomcat-managed-8 should be updated to support Tomcat 10 but this isn't available (yet). -->
